<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">إنجاد</string>

    <string name="Password">كلمة المرور</string>

    <string name="ConfirmPassword">تأكيد كلمة المرور</string>


    <string name="username">اسم المستخدم</string>
    <string name="username1">اسم المبلغ:</string>

    <string name="email">البريد الإلكتروني</string>
    <string name="phone">رقم الجوال</string>
    <string name="signup">تسجيل</string>
    <string name="login">دخول</string>
    <string name="olduser">تسجيل دخول</string>
    <string name="profile">الملف الشخصي</string>
    <string name="my_reports">قائمة البلاغات</string>
    <string name="my_chats">المحادثات</string>

    <string name="my_healthcondition">المعلومات الصحية</string>
    <string name="providehelp">تقديم المساعدة للآخرين </string>
    <string name="accessToMIC">استخدام المايكروفون</string>
    <string name="savechenges">حفظ التغييرات</string>
    <string name="my_reportslist">قائمة بلاغاتي</string>
    <string name="toRegister">اضغط هنا إذا لم يكن لديك حساب</string>
    <string name="accessTocontact">تنبيه ثلاثة من معارفك فقط</string>
    <string name="phone_et">رقم الجوال </string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>

    <string name="failed_login">اسم المستخدم او كلمة المرور غير صحيحة</string>
    <string name="Msg_ErrorTitle">خطأ</string>
    <string name="Msg_RequiredUserName">من فضلك ادخل اسم المستخدم</string>
    <string name="Msg_ok">موافق</string>
    <string name="Msg_FormatUserName">يجب ان يحتوي اسم المستخدم على الحروف التالية فقط ( 0~9 ) or ( A~Z ) or ( a~z ) or ( . ) or ( _ )</string>
    <string name="Msg_Requiredpass">من فضلك ادخل كلمة المرور.</string>
    <string name="No_internetconnection">يتطلب هذا التطبيق الاتصال بشبكة الانترنت يرجى التحقق وحاول مرة أخرى</string>
    <string name="Msg_RequiredEmail">من فضلك ادخل البريد الإلكتروني.</string>
    <string name="Msg_FormateEmail">من فضلك ادخل البريد الإلكتروني بشكل صحيح.</string>
    <string name="Msg_Formatephone">من فضلك ادخل رقم الجوال بشكل صحيح. </string>
    <string name="Msg_RequiredPassword">من فضلك ادخل كلمة المرور.</string>
    <string name="Msg_ConfirmPassword">كلمة المرور وتأكيد كلمة المرور غير متطابقتين.</string>
    <string name="Msg_RequiredHealth">من فضلك ادخل معلوماتك الصحية.</string>
    <string name="Msg_Requiredphone">من فضلك ادخل رقم الجوال.</string>
    <string name="error_confrim">تأكد أن كل الحقول كاملة.</string>
    <string name="Log_out">تسجيل خروج</string>
    <string name="New_user">مستخدم جديد؟</string>
    <string name="pass_length">يجب أن يكون الرقم السري 8 حروف أو أرقام وأكثر. </string>
    <string name="deleteuser">تم حذف الحساب بنجاح. </string>
    <string name="success_Log_in">تمت عملية تسجيل الدخول بنجاح... </string>
    <string name="success_Log_out">تمت عملية تسجيل الخروج بنجاح... </string>
    <string name="success_sign_in">تمت عمليةالتسجيل بنجاح... </string>
    <string name="fill_contact">من فضلك أدخل رقم الجوال للشخص الذي تريد تنبيهه في حالتك الطارئة. </string>
    <string name="save_change">تم تحديث الملف الشخصي. </string>
    <!--string name="title_activity_main2">Main2Activity</string-->
    <string name="send">إرسال</string>
    <string name="emrgType">نوع الحالة</string>
    <string name="theft">سرقة</string>
    <string name="accident">حادث</string>
    <string name="emrg_case">حالة إسعافية</string>
    <string name="fire">حريق</string>
    <string name="other">أخرى</string>
    <string name="emergytype">نوع الحالة:</string>
    <string name="emergytype1"> الحالة</string>
    <string name="severity">المستوى:</string>
    <string name="severity1">المستوى</string>
    <string name="info">المعلومات الصحية:</string>
    <string name="info1">معلومات</string>
    <string name="Location">الموقع:</string>
    <string name="Location1">الموقع</string>
    <string name="txtusername">اسم المبلغ</string>
    <string name="closereport">إغلاق</string>
    <string name="textreporterlist">قائمة البلاغات</string>




    <string name="deleteaccount">حذف الحساب</string>

    <string-array name="stat_array">
        <item>نشط</item>
        <item>انتهى</item>
        <item>قيد المعالجة</item>
    </string-array>

</resources>
