<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryBlack"
    tools:context="com.example.lenovo.enjad.Activities.EmrgTypeDialog">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="253dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="50dp"
        tools:layout_editor_absoluteY="126dp">


        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="45dp"

            android:text="@string/accident" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_weight="1"

            android:text="@string/emrg_case" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:text="@string/theft" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:text="@string/fire" />

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="184dp"
            android:layout_height="45dp"
            android:layout_weight="1"></RadioButton>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/other" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/tableRow"
        android:layout_width="246dp"
        android:layout_height="45dp"
        android:layout_marginBottom="38dp"
        android:layout_marginEnd="18dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/button3"
            style="@style/ButtonText"
            android:layout_width="243dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryRed"
            android:text="@string/send" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
