<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"


    tools:context="com.example.lenovo.enjad.Activities.reportInfoDailog">

    <android.support.constraint.ConstraintLayout
        android:layout_width="400dp"
        android:layout_height="300dp"
        android:background="@android:color/holo_red_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">


        <TextView
            android:id="@+id/emergtype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emergytype"
            android:textColor="@color/whitetext"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.32"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.31" />

        <TextView
            android:id="@+id/severity1"
            android:layout_width="150dp"
            android:layout_height="28dp"
            android:layout_marginTop="48dp"
            android:background="@android:color/black"
            android:text="@string/severity1"
            android:textAlignment="textStart"
            android:textColor="@color/whitetext"
            android:textSize="12sp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.41000003" />

        <TextView
            android:id="@+id/usser_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username1"
            android:textColor="@color/whitetext"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.318"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.153" />

        <TextView
            android:id="@+id/Location1"
            android:layout_width="150dp"
            android:layout_height="28dp"
            android:background="@android:color/black"
            android:text="@string/Location1"
            android:textAlignment="textStart"
            android:textColor="@color/whitetext"
            android:textSize="12sp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.84000003" />

        <TextView
            android:id="@+id/severity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/severity"
            android:textColor="@color/whitetext"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.32"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.43" />

        <TextView
            android:id="@+id/txtusername"
            android:layout_width="150dp"
            android:layout_height="28dp"
            android:background="@android:color/black"
            android:text="@string/txtusername"
            android:textAlignment="textStart"
            android:textColor="@color/whitetext"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.13" />

        <TextView
            android:id="@+id/emergtype1"
            android:layout_width="150dp"
            android:layout_height="32dp"
            android:background="@android:color/black"
            android:text="@string/emergytype1"
            android:textAlignment="textStart"
            android:textColor="@color/whitetext"
            android:textSize="12sp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.32" />

        <TextView
            android:id="@+id/info1"
            android:layout_width="150dp"
            android:layout_height="28dp"
            android:layout_marginRight="16dp"
            android:background="@android:color/black"
            android:text="@string/info1"
            android:textAlignment="textStart"
            android:textColor="@color/whitetext"
            android:textSize="12sp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.85"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.69" />

        <TextView
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info"
            android:textColor="@color/whitetext"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.33"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.69" />

        <TextView
            android:id="@+id/Location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Location"
            android:textColor="@color/whitetext"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.34"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.85" />

    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>